crates/templates/tests/snapshots/command_usage_test__render-17.snap
---
source: crates/templates/tests/command_usage_test.rs
description: Command usage with a required positional argument with a custom value notation
expression: output
---
foo_usage() {
  printf "Test simple usage\n"

  printf "\n\033[4m%s\033[0m\n" "Usage:"
  printf "  foo [OPTIONS] VALUE_NOTATION\n"
  printf "  foo -h|--help\n"
  printf "\n\033[4m%s\033[0m\n" "Arguments:"
  printf "  VALUE_NOTATION\n"
  printf "    Source file\n"
  printf "    [@required]\n"

  printf "\n\033[4m%s\033[0m\n" "Options:"
  printf "  -h --help\n"
  printf "    Print help\n"
}
