crates/templates/tests/snapshots/command_usage_test__render-22.snap
---
source: crates/templates/tests/command_usage_test.rs
description: Command usage with a flag that uses -h as short
expression: output
---
foo_usage() {
  printf "Test simple usage\n"

  printf "\n\033[4m%s\033[0m\n" "Usage:"
  printf "  foo [OPTIONS]\n"
  printf "  foo --help\n"

  printf "\n\033[4m%s\033[0m\n" "Options:"
  printf "  -h --height\n"
  printf "    Test height option\n"
  printf "  --help\n"
  printf "    Print help\n"
}
