crates/templates/tests/snapshots/command_usage_test__render.snap
---
source: crates/templates/tests/command_usage_test.rs
description: Typical Command usage
expression: output
---
foo_usage() {
  printf "Test simple usage\n"

  printf "\n\033[4m%s\033[0m\n" "Usage:"
  printf "  foo [OPTIONS]\n"
  printf "  foo -h|--help\n"

  printf "\n\033[4m%s\033[0m\n" "Options:"
  printf "  -h --help\n"
  printf "    Print help\n"
}
